--- a/style.css
+++ b/style.css
@@ -1,4 +1,12 @@
-* {
-  margin: 0;
-  padding: 0;
+#grid-container {
+  display: grid;
+  grid-template-rows: repeat(16, 50px);
+  grid-template-columns: repeat(16, 50px);
+  grid-auto-rows: 50px;
+  grid-auto-columns: 50px;
+  justify-content: center;
+}
+.grid-cell {
+  background-color: white;
+  border: 1px solid black;
 }
