--- a/style.css
+++ b/style.css
@@ -1,4 +1,12 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 #grid-container {
+  margin: auto;
+  height: 960px;
+  width: 960px;
   display: grid;
   grid-template-rows: repeat(16, 50px);
   grid-template-columns: repeat(16, 50px);
@@ -11,6 +19,6 @@
   border: 1px solid black;
 }
 
-.grid-cell:hover {
+.active {
   background-color: red;
 }
