--- a/style.css
+++ b/style.css
@@ -8,10 +8,10 @@
   height: 960px;
   width: 960px;
   display: grid;
-  grid-template-rows: repeat(16, 50px);
-  grid-template-columns: repeat(16, 50px);
-  grid-auto-rows: 50px;
-  grid-auto-columns: 50px;
+  grid-template-rows: repeat(16, 1fr);
+  grid-template-columns: repeat(16, 1fr);
+  grid-auto-rows: 1fr;
+  grid-auto-columns: 1fr;
   justify-content: center;
 }
 .grid-cell {
